turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	getCouleurSol()
	if ( getCouleurSol() == Color.black){
		setCouleurSol(Color.white)
		marqueSol()
		gauche()
		avance()
	}
	if (getCouleurSol() == Color.white){
		setCouleurSol(Color.black)
		marqueSol()
		droite()
		avance()
	}
}

def marqueSol(){
	baisseBrosse()
	leveBrosse()
}
